<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/student"
            android:scaleType="centerCrop"
            android:src="@drawable/student" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="@dimen/background_alpha"
            android:background="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/layout_margin"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:contentDescription="@string/logo_letter"
                android:scaleType="centerInside"
                android:src="@drawable/u_logo"
                android:tint="@android:color/white" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:contentDescription="@string/logo_sign"
                android:src="@drawable/udacity"
                android:tint="@color/colorAccent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-smallcaps"
                android:gravity="center"
                android:text="@string/slogan"
                android:textColor="@color/colorAccent"
                android:textSize="24sp" />

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@android:color/white">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="@dimen/background_alpha"
            android:background="@drawable/wall" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_marginBottom="@dimen/layout_margin"
            android:layout_marginLeft="@dimen/layout_margin"
            android:layout_marginRight="@dimen/layout_margin"
            android:layout_marginTop="@dimen/layout_margin"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                style="@style/ContactsFont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:autoLink="phone"
                android:drawableEnd="@mipmap/ic_call_black_24dp"
                android:drawableRight="@mipmap/ic_call_black_24dp"
                android:text="@string/phone" />

            <TextView
                style="@style/ContactsFont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:autoLink="map"
                android:drawableEnd="@mipmap/ic_map_black_24dp"
                android:drawableRight="@mipmap/ic_map_black_24dp"
                android:text="@string/address" />

            <TextView
                style="@style/ContactsFont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:drawableEnd="@mipmap/ic_public_black_24dp"
                android:drawableRight="@mipmap/ic_public_black_24dp"
                android:text="@string/site" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
